# ztna-agent

./: .gitignore  .pre-commit-config.yaml  .swiftlint.yml  AGENTS.md  CLAUDE.md  oracle-review.md
.claude/: settings.local.json
.github/workflows/: lint.yml  release.yml  test.yml
app-connector/: Cargo.toml
app-connector/certs/: connector-cert.pem
app-connector/src/: main.rs  metrics.rs  qad.rs  signaling.rs
app-connector/tests/: integration_test.rs
certs/: cert.pem  connector-key.pem  key.pem
core/packet_processor/: Cargo.toml
core/packet_processor/src/: lib.rs
core/packet_processor/src/p2p/: candidate.rs  connectivity.rs  hole_punch.rs  mod.rs  resilience.rs  signaling.rs
deploy/: README.md
deploy/ansible/: ansible.cfg  inventory.ini  playbook.yml
deploy/aws/: aws-deploy-skill.md  setup-certbot.sh  ztna-cert-renew.service  ztna-cert-renew.timer
deploy/config/: agent.json  connector.json  intermediate.json
deploy/docker/: Dockerfile.connector  Dockerfile.intermediate
deploy/docker-nat-sim/: .dockerignore  Dockerfile.connector  Dockerfile.echo-server  Dockerfile.intermediate  Dockerfile.quic-client  QUICK_START.sh  README.md  TEST_REPORT.md  TROUBLESHOOTING.md  VERIFICATION_SUMMARY.md  docker-compose.yml  entrypoint-client.sh  entrypoint-connector.sh  setup-nat.sh  test-nat-simulation.sh  watch-logs.sh
deploy/k8s/: README.md  build-push.sh  check-cluster.sh  k8s-deploy-skill.md  validate-secrets.sh
deploy/terraform/: ec2.tf  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf
docs/: architecture.md  architecture_design.md  demo-runbook.md  implementation_plan.md  manual_xcode_setup_guide.md  research_bookmarks.md  task.md  walkthrough.md
intermediate-server/: Cargo.toml
intermediate-server/certs/: cert.pem  key.pem
intermediate-server/src/: auth.rs  client.rs  main.rs  metrics.rs  qad.rs  registry.rs  signaling.rs
intermediate-server/tests/: integration_test.rs
ios-macos/App/: ContentView.swift
ios-macos/Extension/: PacketTunnelProvider.swift
ios-macos/Shared/: PacketProcessor-Bridging-Header.h
scripts/: generate-client-certs.sh  resolve-pr-comments.sh
tasks/001-quic-tunnel-integration/: placeholder.md  plan.md  research.md  state.md  todo.md
tasks/002-intermediate-server/: plan.md  research.md  state.md  todo.md
tasks/003-app-connector/: plan.md  state.md
tasks/_context/: README.md  (+3 more)
tests/e2e/fixtures/quic-client/: Cargo.toml
tests/e2e/fixtures/quic-client/src/: main.rs
(+154 files in other folders)
